github pages: home page pathing correction

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://raihven.github.io/react-website-practice",
+  "homepage": "https://raihven.github.io/",
   "name": "react-website-practice",
   "version": "0.1.0",
   "private": true,
