--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://raihven.github.io/",
+  "homepage": "https://raihven.github.io/react-website-practice/",
   "name": "react-website-practice",
   "version": "0.1.0",
   "private": false,
