--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "svgo": "^3.0.2",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint-plugin-jest": "^27.4.3",
     "gh-pages": "^6.0.0"
   }
 }
